fix(aop): replace CGLIB with ByteBuddy so AOP works on JDK 17+ servers (#305)
* feat(aop): add ByteBuddy-based ProxyFactory

CGLIB 3.3.0 cannot initialise on JDK 17+ without --add-opens, which a Paper
server never provides. ProxyFactory replaces it using ByteBuddy with the
INJECTION class loading strategy. Public signatures are unchanged.

Refs #188

* test(aop): pin Object method forwarding semantics

hashCode/equals/toString must keep being forwarded to the target so that a
proxy behaves identically to its target inside hash-based collections.

Refs #188

* test(aop): cover proxying across class loader boundaries

Module beans load in the UltiTools URLClassLoader while the framework loads in
Paper's plugin loader. That boundary was never covered, which is why the AOP
engine stayed unverified. Pins that the INJECTION strategy keeps package-private
methods interceptable across it.

Refs #188

* feat(aop): wire AopProxyBeanPostProcessor to ProxyFactory

Also re-enables the two integration tests that were disabled since 6.2.0 with
an unverified claim about --add-opens. They now run on plain JDK 21.

Refs #188

* refactor(aop)!: remove CglibProxyFactory and the cglib dependency

CglibProxyFactory is deleted rather than deprecated: it cannot function on any
JDK 17+ server, it had zero downstream references, and 6.3.0 is a removal window
per COMPATIBILITY.md. Paper now downloads byte-buddy instead of cglib-nodep.

Refs #188

* docs: record CglibProxyFactory removal in COMPATIBILITY.md

Adds an AOP group to both the English and Chinese removal lists, and updates
the runtime-dependency examples now that Paper downloads byte-buddy.

Refs #188

* docs: update README for the ByteBuddy proxy engine

CglibProxyFactory was removed in this branch; the README still described the
AOP layer as CGLIB-based and listed the deleted class in the package tree.

Refs #188

* fix(aop): unify proxy-class detection and close ByteBuddy migration gaps

Final review for #188 found that TaskManag